crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_colors__convert_colors-2.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_colors.rs
expression: "test_config(r#\"{ \"convertColors\": {  } }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should convert to short hex -->\n    <g color=\"#ff00aa\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should convert to short hex -->
    <g color="#f0a"/>
</svg>
