crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__convert_colors__convert_colors-5.snap
---
source: crates/oxvg_optimiser/src/jobs/convert_colors.rs
expression: "test_config(r#\"{ \"convertColors\": { } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve color-like substrings that aren't colors -->\n    <linearGradient id=\"Aa\">\n        <stop stop-color=\"ReD\" offset=\"5%\"/>\n    </linearGradient>\n    <text x=\"0\" y=\"32\" fill=\"gold\">uwu</text>\n    <text x=\"0\" y=\"64\" fill=\"GOLD\">owo</text>\n    <text x=\"0\" y=\"96\" fill=\"url(#Aa)\">eue</text>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve color-like substrings that aren't colors -->
    <linearGradient id="Aa">
        <stop stop-color="red" offset="5%"/>
    </linearGradient>
    <text x="0" y="32" fill="gold">
        uwu
    </text>
    <text x="0" y="64" fill="gold">
        owo
    </text>
    <text x="0" y="96" fill="url(#Aa)">
        eue
    </text>
</svg>
